# Project-01-MLOps

./: LICENSE  README.md  app.py  demo.py  projectflow.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: aws.yaml
artifact/06_04_2026_12_01_52/data_transformation/transformed_object/: preprocessing.pkl
artifact/06_04_2026_12_14_53/data_transformation/transformed_object/: preprocessing.pkl
artifact/06_04_2026_17_55_48/data_transformation/transformed_object/: preprocessing.pkl
artifact/06_04_2026_18_06_58/data_transformation/transformed_object/: preprocessing.pkl
artifact/06_04_2026_18_38_08/data_transformation/transformed_object/: preprocessing.pkl
artifact/06_04_2026_18_49_38/data_transformation/transformed_object/: preprocessing.pkl
artifact/06_05_2026_10_20_38/data_transformation/transformed_object/: preprocessing.pkl
artifact/06_05_2026_10_25_30/data_transformation/transformed_object/: preprocessing.pkl
artifact/06_08_2026_11_13_05/data_transformation/transformed_object/: preprocessing.pkl
notebook/: mongoDB_demo.ipynb
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py
src/configuration/: aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: config_entity.py
src/pipline/: training_pipeline.py
tests/: test_aws_connection.py  test_aws_storage.py
