[project]
name="src"
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [{name = "Nidhi Tank", email = "ntank2024@gmail.com"}]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}